# notes-app

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: asgi.py  mixins.py  permissions.py  settings.py  urls.py  wsgi.py
src/apps/authentication/: serializers.py  urls.py
src/apps/notes/: apps.py  exceptions.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
src/apps/tags/: apps.py  models.py  serializers.py  urls.py  views.py
src/apps/users/: serializers.py  services.py  urls.py  views.py
tests/: conftest.py  utils.py
tests/fixtures/: notes_fixture.json  tags_fixture.json  users_fixture.json
tests/notes/: test_notes.py  test_services.py
tests/tags/: test_tags.py
tests/users/: test_services.py  test_users.py
